# minor-blok2

LINAL/: LINAL.sln
LINAL/Debug/: LINAL.ilk
LINAL/LINAL/: Color.h  CoordinateSystem.cpp  CoordinateSystem.h  Entity.h  Input.cpp  Input.h  LINAL.cpp  LINAL.vcxproj  LINAL.vcxproj.filters  Line.cpp  Line.h  Matrix.h  Point.h  Vector.h  Viewer.cpp  Viewer.h
LINAL/LINAL/Debug/: LINAL.exe.recipe  line.new.obj.enc  vc142.idb  viewer.obj.enc
LINAL/LINAL/Debug/LINAL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LINAL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
kmintapp/: .gitignore  .gitmodules  CMakeLists.txt  shell.nix  tutorial.md
kmintapp/libkmint/: Doxyfile
kmintapp/libkmint/doc/: tutorial.org  tutorial.tex
kmintapp/libkmint/include/kmint/: main.hpp
kmintapp/libkmint/include/kmint/math/: rectangle.hpp
kmintapp/libkmint/include/kmint/play/: quad_tree.hpp  stage.hpp
kmintapp/libkmint/include/kmint/ui/: #window.hpp#
kmintapp/libkmint/src/kmint/play/: stage.cpp
kmintapp/libkmint/src/kmint/ui/: window.cpp
kmintapp/sim/: CMakeLists.txt
kmintapp/sim/include/sim/: algorithms.hpp  cow.hpp  hare.hpp  hello_actor.hpp  rectangle_drawable.hpp
kmintapp/sim/src/: main.cpp
kmintapp/sim/src/sim/: algorithms.cpp  cow.cpp  hare.cpp  hello_actor.cpp  rectangle_drawable.cpp
